# Portfolio

C++/1410FinalProject/: CMakeLists.txt
C++/1410FinalProject/include/: Car.h  carFileReader.h
C++/1410FinalProject/res/: CarDatabase.csv
C++/1410FinalProject/src/: Car.cpp  carFileReader.cpp  main.cpp
C++/ConvNeuralNet/: CMakeLists.txt
C++/ConvNeuralNet/include/: ConvLayer.h  ConvNet.h
C++/ConvNeuralNet/res/: CNNModel.csv
C++/ConvNeuralNet/src/: ConvLayer.cpp  ConvNet.cpp  main.cpp
C++/KNearestNeighbors/: CMakeLists.txt
C++/KNearestNeighbors/include/: KNNClassifier.h
C++/KNearestNeighbors/src/: KNNClassifier.cpp  main.cpp
Python/VectorApp/: VectorPlot.py  VectorPlotGUI.py  VectorUtils.py
